@@ -6,10 +6,13 @@ GNU findutils NEWS - User visible changes.      -*- outline -*- (allout)
 
 Updated the Hungarian and Slovak translations.
 
-** Changes to find
+** Changes to the build process
 
 The configure option --enable-id-cache has been removed.  It has been
 a no-op since findnutils-4.5.15.
+
+The configure option --enable-debug has been removed.  Debugging in
+find is now controlled by its -D option only.
 
 * Major changes in release 4.6.0, 2015-12-28
 
